welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value worldHeight
  var colors = new Array[Color](worldHeight);
                                ^